@@ -163,8 +163,9 @@
                 <artifactId>maven-failsafe-plugin</artifactId>
                 <configuration>
                     <encoding>UTF-8</encoding>
-                    <argLine>@{argLine} --add-opens java.base/java.time=ALL-UNNAMED</argLine>
-                    <argLine>${failsafeArgLine}</argLine>
+                    <skipTests>${skipITs}</skipTests>
+<!--                    <argLine>@{argLine} &#45;&#45;add-opens java.base/java.time=ALL-UNNAMED</argLine>-->
+<!--                    <argLine>${failsafeArgLine}</argLine>-->
                     <failIfNoTests>false</failIfNoTests>
                     <includes>
                         <include>
@@ -184,7 +185,6 @@
                         </goals>
                         <phase>integration-test</phase>
                         <configuration>
-                            <skipTests>${skipITs}</skipTests>
                             <systemPropertyVariables>
                                 <java.util.logging.SimpleFormatter.format>&lt;%1$tm-%1$td-%1$tY %1$tH:%1$tM:%1$tS&gt; &lt;%4$s&gt; &lt;%2$s&gt; &lt;%5$s%6$s&gt;%n
                                 </java.util.logging.SimpleFormatter.format>
